# VideoCapture

./: CMakeLists.txt  README.md  main.cpp
3rd/include/: x265_config.h
3rd/include/libavutil/: ffversion.h
include/: videocapture.h
src/: ffdecoder.cpp  ffdecoder.h  videocapture.cpp
